Closed
Bug 180098
Opened 22 years ago
Closed 22 years ago
"--enable-activex-scripting" option seems to break composition window.
Categories
(Core :: XPConnect, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: fredbezies, Assigned: dbradley)
Details
Attachments
(2 files, 1 obsolete file)
34.35 KB,
image/jpeg
|
Details | |
1.19 KB,
patch
|
adamlock
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.3a) Gecko/20021113
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.3a) Gecko/20021113
I cannot use anymore mailnews composition windows in CVS based build since
yesterday.
Composition is still broken, even using a new tarball source and apply CVS on it.
Reproducible: Always
Steps to Reproduce:
1. Grab a tarball source from 13 november
2. Use CVS on it
Actual Results:
After building, composition window is still broken ! :-/
From bar is empty :-|
Expected Results:
Working composition window.
Trying with a blank new profile doesn't change a thing. I will post asap a
screenshot of the bug I'm seeing.
I am using classic theme, and when running Profile manager, new mozilla is using
modern theme ?!
Reporter | ||
Comment 1•22 years ago
|
||
Reporter | ||
Comment 2•22 years ago
|
||
Here is my .mozconfig if it helps a little :
ac_add_options --enable-activex-scripting
ac_add_options --disable-pedantic
ac_add_options --disable-tests
ac_add_options --disable-debug
ac_add_options --enable-strip
ac_add_options --enable-optimize="-O2"
ac_add_options --enable-crypto
Is active-scripting guilty here ?!
Did you clobber?
Are you unable to select an account in the "From" dropdown?
WFM, current CVS, Linux.
Reporter | ||
Comment 4•22 years ago
|
||
I cannot choose any from because of an empty list. But, after grabbing a brand
new tarball and update it with CVS, I think I find the "guilty".
It seems to be related to "--enable-activex-scripting" option.
It completely brokes composition window. What a pity I do not have js error :-/
Very strange !
If I delete this option, mozilla is working without problem !
By the way, "--enable-activex-scripting option" is win32 only.
Assignee: ducarroz → seawood
Component: Composition → Build Config
Product: MailNews → Browser
QA Contact: esther → granrose
Summary: Composition window is still broken (related to bug fix for 176505 ?) → "--enable-activex-scripting" option seems to break composition window.
Comment 6•22 years ago
|
||
Moving to proper component.
Component: Build Config → Embedding: ActiveX Wrapper
QA Contact: granrose → mdunn
CC'ing David for ideas. I don't see anything in the plugin which might cause it,
though I guess it could be a COM connect issue.
The compose window has two errors, either of which may be the cause, unrelated
to the activex-scripting flag
JavaScript error:
chrome://help/content/contextHelp.js line 1: redeclaration of const MOZ_HELP_URI
JavaScript error:
chrome://editor/content/editorUtilities.js line 1: redeclaration of const XUL_NS
Reporter | ||
Comment 9•22 years ago
|
||
In answer to comment #8 : those broken composition window only appears when I
use "--enable-active-scripting" for building.
I've built the mozilla I am using, without "--enable-active-scripting" and no
problem. :-|
Assignee | ||
Comment 10•22 years ago
|
||
I'll take this, I'm sure it's probably some hole I created in XPConnect
Assignee: adamlock → dbradley
Component: Embedding: ActiveX Wrapper → XPConnect
Assignee | ||
Comment 11•22 years ago
|
||
I botched the enumerator. I was thinking of a hook that would always get
called, but when I implemented I implemented assuming that IDispatch interface
had already been determined. The result was that this returned false and caused
enumerating wrapped natives to fail.
Assignee | ||
Comment 12•22 years ago
|
||
Attachment #106248 -
Attachment is obsolete: true
Comment 13•22 years ago
|
||
Comment on attachment 106250 [details] [diff] [review]
Added test for IDispatch enabled
r=adamlock
Attachment #106250 -
Flags: review+
Comment 14•22 years ago
|
||
Comment on attachment 106250 [details] [diff] [review]
Added test for IDispatch enabled
sr=jst
Attachment #106250 -
Flags: superreview+
Assignee | ||
Comment 15•22 years ago
|
||
Patch checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 16•22 years ago
|
||
You can mark it verified fixed. I am using a build with
"--enable-activex-scripting" option and it works.
Thanks for fixing this bug.
You need to log in
before you can comment on or make changes to this bug.
Description
•