Bug 180098 - "--enable-activex-scripting" option seems to break composition window. Error was in enumeration when IDispatch logic was turned on. r=adamlock, sr=jst